<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ContactUsActivity"
    android:gravity="center"
    android:paddingHorizontal="20dp"
    android:background="#F7F7F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/form_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@android:color/darker_gray"-->
<!--            android:layout_marginBottom="30dp" />-->

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_prompt"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textEmailSubject"
            android:hint="@string/subject_prompt"
            android:autofillHints="" />

        <EditText
            android:id="@+id/messageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textLongMessage"
            android:hint="@string/body_prompt"
            android:minLines="5"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/send_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</LinearLayout>